fixed text alignment

--- a/frontend/src/app/banner/banner.page.scss
+++ b/frontend/src/app/banner/banner.page.scss
@@ -49,6 +49,7 @@
   display: flex;
   justify-content: left;
   align-content: flex-start;
+  text-align: left;
   margin: 0;
   padding: 0;
   color: #ffffff;
